[package]
name = "iitkgp_erp_login"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["cookies", "json"] }
rpassword = "7.4.0"
scraper = "0.23.1"
tokio = { version = "1.47.1", features = ["full"] }

[lib]
name = "iitkgp_erp_login"
path = "src/lib.rs"

[[bin]]
name = "login"
path = "src/main.rs"
